fix: improve text/background contrast👀

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,9 +9,7 @@
   --text: #C8C2B7;
 } */
 html {
-    color: #C8C2B7;
     line-height: 1.6;
-    /* font-size: 125%; */
     font-weight: 500;
 }
 
