--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -10,7 +10,7 @@
         --hovercolor: #02394A;
         --darkMaincolor: #5C8001;
         --accentText: #ACC196;
-        --text: #C8C2B7;
+        --text: #F0F4F5;
     }
 
     a,
